--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +7,7 @@
   text-decoration: none;
   list-style: none;
   border: none;
+  font-family: "Nunito", sans-serif;
 }
 
 html,
@@ -12,4 +15,5 @@ body {
   position: relative;
   min-width: 100vw;
   min-height: 100vh;
+  background-color: #e8e3e3;
 }
