--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,5 @@ body {
   position: relative;
   min-width: 100vw;
   min-height: 100vh;
-  background-color: #e8e3e3;
+  background-color: white;
 }
